tests/baselines/reference/classNotExtendingStruct_basic.errors.txt
tests/cases/conformance/basicStructs/structDeclarations_basic/structHeritageSpecification_basic/classNotExtendingStruct_basic.ts(5,17): error TS2311: A class may only extend another class.


==== tests/cases/conformance/basicStructs/structDeclarations_basic/structHeritageSpecification_basic/classNotExtendingStruct_basic.ts (1 errors) ====
    struct S {
    	bar: string;
    }
    
    class C extends S { // error, class may only extend class
                    ~
!!! error TS2311: A class may only extend another class.
    	foo: string;
    }
    